--- a/src/component/Style/Hero.css
+++ b/src/component/Style/Hero.css
@@ -10,3 +10,92 @@ body{
   width: 100%;
   height: auto;
 }
+.hero_feature{
+  display: flex;
+  justify-content:space-evenly ;
+  align-items: center;
+  margin:30px  20px;
+  padding: 30px;
+  flex-wrap: wrap;
+}
+.hero_writeup_feature h1{
+  font-size: 4em;
+  color: #161518;
+}
+.hero_writeup_feature h3{
+  font-size: 16px;
+  text-decoration: underline #EF6820;
+  color: #2B2A30;
+}
+.hero_writeup_feature p{
+  font-size: 1em;
+  color: #565560;
+  line-height: 30px; 
+}
+.hero_writeup_feature button{
+  margin-top: 20px;
+  padding:10px 30px 10px 30px;
+  background-color: #EF6820;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  margin-right: 15px;
+  font-size: 20px;
+}
+.button_{
+  display: flex;
+}
+.hero_writeup_feature a{
+  text-decoration: none;
+  border: 2px dotted #F05513;
+  padding:8px 28px 8px 28px;
+  color: #EF6820;
+  font-size: 20px;
+}
+@media screen and (max-width: 480px){
+  .hero_writeup_feature h1{
+    font-weight: 700;
+  }
+}
+
+@media screen and (max-width: 768px){
+.hero_writeup_feature h1{
+font-size: 45px;
+color: #161518;
+font-weight: 700px;
+}
+.hero_writeup_feature h3{
+font-size: 16px;
+text-decoration: underline #EF6820;
+color: #2B2A30;
+}
+.hero_writeup_feature p{
+font-size: 16px;
+color: #565560;
+line-height: 20px;
+font-weight: 400;
+margin-top: 20px;
+}
+
+.button_{
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+margin-bottom: 20px;
+}
+.hero_writeup_feature button{
+width: 100%;
+padding: 10px 10px 10px 90px;
+font-size: 16px;
+margin-bottom: 10px;
+display: flex;
+
+}
+.hero_writeup_feature a{
+width: 100%;
+padding: 10px 10px 10px 90px;
+font-size: 16px;
+display: flex;
+}
+}
